error handling on CustomAuthenticationHandler